--- a/sample-spring-boot-kitchensink/build.gradle
+++ b/sample-spring-boot-kitchensink/build.gradle
@@ -22,5 +22,5 @@ dependencies {
 }
 
 test {
-    environment "DATABASE_URL", "PUT YOUR URI HERE" 
+    environment "DATABASE_URL", "postgres://wayigilluozxkq:cc228562345ca622242044d6bb2f56ed6db75ec775a9214974175e128b706ccb@ec2-23-23-223-2.compute-1.amazonaws.com:5432/d9724939catru7" 
 }
